Fix bug toolbar buttons doens't hide after tab preview clicked & update z-index of icon.expand-editor.

--- a/martor/static/martor/css/martor.bootstrap.css
+++ b/martor/static/martor/css/martor.bootstrap.css
@@ -120,6 +120,7 @@ div.martor-preview-stale {
   position: absolute;
   bottom: -8px;
   right: 8px;
+  z-index: 100;
 }
 .no-border {
   border: none!important;
